# mmvv

./: .gitignore  Cargo.toml  Justfile  README.md  TODO.txt  build.rs  index.html  print.html  searchindex.js  searchindex.json
benches/: bench.sh
docs/guide/: faq.md
docs/reference/: rew-cat.md  rew-seq.md  rew-x.md  rew.md
fuzz/: Cargo.toml
guide/: faq.html
reference/: rew-cat.html  rew-seq.html  rew-x.html  rew.html
src/: app.rs  args.rs  command.rs  env.rs  error.rs  examples.rs  lib.rs  main.rs  pager.rs  pattern.rs  pipeline.rs  process.rs  shell.rs  spawn.rs  stdbuf.rs
src/commands/: ascii.rs  cat.rs  first.rs  join.rs  last.rs  loop.rs  lower.rs  mod.rs  seq.rs  skip.rs  split.rs  stream.rs  trim.rs  upper.rs  x.rs
tests/: examples.rs  transcript.rs
tests/commands/: seq.rs  x.rs
xtask/src/: command.rs  docs.rs  main.rs
