[workspace]
members = [".", "fuzz", "xtask"]

[workspace.dependencies]
anyhow = "1.0.86"
clap = "4.5.16"

[package]
name = "rew"
version = "0.4.0"
description = "The Swiss Army Knife of line-oriented text processing. Transform text by composing parallel shell pipelines!"
categories = ["command-line-utilities", "text-processing", "filesystem"]
keywords = ["cli", "utility", "text", "rename", "path"]
authors = ["Jan Pikl <pikl.jan@gmail.com>"]
repository = "https://github.com/jpikl/rew"
documentation = "https://jpikl.github.io/rew"
homepage = "https://jpikl.github.io/rew"
license = "MIT"
edition = "2021"

[dependencies]
anstream = "0.6.15"
anyhow = { workspace = true }
bstr = "1.10.0"
clap = { workspace = true, features = [
    "cargo",
    "derive",
    "env",
    "string",
    "wrap_help",
] }
derive_more = { version = "1.0.0", features = [
    "display",
    "error",
    "is_variant",
] }
deunicode = "1.6.0"
itoap = "1.0.1"
memchr = "2.7.4"
terminal_size = "0.3.0"
unicode-width = "0.1.13"
which = "6.0.3"

[dev-dependencies]
assert_cmd = "2.0.16"
claims = "0.7.1"
rstest = "0.18.2"
term-transcript = "0.3.0"

[profile.release]
codegen-units = 1
panic = "abort"
strip = true
lto = true

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
